--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -5,10 +5,11 @@
     box-sizing:borderbox;           /* setea ta,año del elemento*/
 }
 /* Variables*/
-$color-header:rgba(96, 53, 10, 0.587);
-$color-footer:rgba(96, 53, 10, 0.587);
+$color-header:rgba(175, 160, 145, 0.933);
+$color-footer:rgba(175, 160, 145, 0.933);
 $color-fondo-body:rgba(211, 193, 175, 0.775);
-$color-fuente:rgb(96, 53, 10);
+$color-fuente: rgba(71, 37, 4, 0.93);
+
 
 /*Listas*/
 $fuentes-tipo :red,green ,blue;
@@ -59,6 +60,17 @@ body                /* importar tipografia desde Google fonts   */
         @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         color:$color-fuente;
-        background-color: $color-fondo-body;
+        background-color: $color-footer !important;
+     
                 
 }
+.page-container {
+    position: relative;
+    min-height: 100vh;
+    background-color: $color-footer;
+    }
+    
+.content-wrap {
+    padding-bottom: 2.5rem;    /* Footer height */
+    background-color: $color-footer;
+    }
