--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -17,7 +17,7 @@
         {
             
             text-align: center;
-            font-size:xx-large;
+            font-size:large;
             /*background-color: #bbb5a8;*/
         }
 
@@ -36,7 +36,7 @@
         div input, textarea
             {
                 background-color: transparent;
-                width: 100%;
+                width: 40%;
                 text-align: center;
                 border-style: hidden;   
                 border-bottom: 2px;    
@@ -53,4 +53,9 @@
                 border-style: solid;
                 padding: 2px;
                 margin: 2px;
+            }
+.page-container
+            {
+            position: relative;
+            min-height: 100vh;
             }
