--- a/scss/components/_productos.scss
+++ b/scss/components/_productos.scss
@@ -13,16 +13,19 @@
             background-size: cover;
             background-attachment: fixed;
         }
-.productos h1
-{
-    text-align: center;
-    font-size:xx-large; 
-}
-.productos p
-{
-    text-align: center;
-    font-size:x-large;
-}    
+.productos
+        {    
+        h1
+            {
+                text-align: center;
+                font-size:xx-large; 
+            }
+        p
+            {
+                text-align: center;
+                font-size:x-large;
+            }    
+        }    
 .tarjetas-de-producto
     {
         width: 100%;
@@ -31,61 +34,61 @@
         grid-template-columns:  1fr 1fr 1fr;
         grid-auto-rows:360px; 
         justify-items:center;     
+        h3
+            {
+                text-align: center;
+                font-size: large;
+                width:100%;
+                padding: 0px;
+                margin-bottom: 5%;
+                position: absolute;
+                bottom: 0px;
 
-    }
-.tarjetas-de-producto div       /*contenedor de la tarjeta de producto*/
-        {
-            
-        height: 300px;
-        width: 270px;
-        background-color:  #bbb5a8;
-        border-style: solid;
-        border-color: #bbb5a8;
-        position: relative;
-        &:hover {
-                border-style: solid;
-                border-width:  2px;
-                border-color: black;
-                }
-        }
-        .tarjetas-de-producto img
-        {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-        }
-    .tarjetas-de-producto a
-        {
-            /* Aplicacion de mapas*/    
-            background-color: map-get($boton-productos,bg-color);
-            text-align: map-get($map: $boton-productos, $key: txt-align);
-            color: map-get($map: $boton-productos, $key: fnt-color);
-            text-decoration: map-get($map: $boton-productos, $key:text-decoration );
-            font-size: map-get($map: $boton-productos, $key: fnt-size );
-            width: map-get($map: $boton-productos, $key:ancho);
+            }
 
-            position: absolute;
-            bottom: 35px;
-            left:0px;
-            transition-duration: 500ms;
-
-            &:hover{
-                    background-color: green;
-                    font-size: larger;
-                    color: white;
-                    transform: scale(1.1);
-                    
-
+        div       /*contenedor de la tarjeta de producto*/
+            {
+                
+            height: 300px;
+            width: 270px;
+            background-color:  #bbb5a8;
+            border-style: solid;
+            border-color: #bbb5a8;
+            position: relative;
+            &:hover {
+                    border-style: solid;
+                    border-width:  2px;
+                    border-color: black;
                     }
-        }
-    .tarjetas-de-producto h3
-    {
-        text-align: center;
-        font-size: large;
-        width:100%;
-        padding: 0px;
-        margin-bottom: 5%;
-        position: absolute;
-        bottom: 0px;
+            }
+            img
+                {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                }
+                 a
+                {
+                /* Aplicacion de mapas*/    
+                background-color: map-get($boton-productos,bg-color);
+                text-align: map-get($map: $boton-productos, $key: txt-align);
+                color: map-get($map: $boton-productos, $key: fnt-color);
+                text-decoration: map-get($map: $boton-productos, $key:text-decoration );
+                font-size: map-get($map: $boton-productos, $key: fnt-size );
+                width: map-get($map: $boton-productos, $key:ancho);
 
-    }
+                position: absolute;
+                bottom: 35px;
+                left:0px;
+                transition-duration: 500ms;
+
+                &:hover{
+                        background-color: green;
+                        font-size: larger;
+                        color: white;
+                        transform: scale(1.1);
+                        
+
+                        }
+            }
+        }
