--- a/css/estilos.css
+++ b/css/estilos.css
@@ -97,6 +97,18 @@ p {
   height: 700px;
   width: 100%;
   align-items: center; }
+  .c-item a {
+    /* leyenda del carousel button*/
+    text-decoration: none; }
+    .c-item a h3 {
+      /* texto del boton sobre el carousel*/
+      text-align: left;
+      margin: 5px;
+      padding: 5px;
+      border-radius: 5%;
+      color: white;
+      background-color: rgba(96, 53, 10, 0.587);
+      width: fit-content; }
   .c-item p {
     /* leyenda del carousel caption*/
     text-align: left;
@@ -104,18 +116,6 @@ p {
     background-color: rgba(255, 255, 255, 0.522);
     width: fit-content;
     padding: 2px; }
-  .c-item a {
-    /* leyenda del carousel button*/
-    text-decoration: none; }
-  .c-item h3 {
-    /* texto del boton sobre el carousel*/
-    text-align: left;
-    margin: 5px;
-    padding: 5px;
-    border-radius: 5%;
-    color: white;
-    background-color: rgba(96, 53, 10, 0.587);
-    width: fit-content; }
 
 .c-img {
   /* clase para las imagenes del carousel*/
@@ -490,14 +490,14 @@ p {
     font-size: small; }
   .contacto h3 {
     font-size: x-small; }
-  .contacto form div input, .contacto form textarea {
+  .contacto form div input,
+  .contacto form textarea {
     width: 80%; }
   .nosotros h2 {
     font-size: small; }
   .nosotros h3 {
     font-size: x-small; }
   footer {
-    /*   height: auto;*/
     width: 100%; }
   .redes {
     width: 40%;
