--- a/scss/base/_mediaquerys.scss
+++ b/scss/base/_mediaquerys.scss
@@ -1,110 +1,133 @@
-@media screen and (max-width:880px)   
+@media screen and (max-width:880px) {
+    .tarjetas-de-producto {
+        grid-template-columns: 1fr 1fr;
+        grid-auto-rows: 360px;
+        height: 1100px;
+    }
+
+    .tar-prod-5 {
+        grid-column: span none;
+    }
+}
+
+@media screen and (max-width:590px)
+/* cambia el grd a 2 columnas x responsive */
     {
-        .tarjetas-de-producto
-        {
-            grid-template-columns:  1fr 1fr;
-            grid-auto-rows:360px; 
-            height: 1100px;
+    .tarjetas-de-producto {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 360px;
+        height: auto;
+    }
+
+    .tar-prod-5 {
+        grid-column: span none;
+    }
+
+
+    .navbar-brand img {
+        height: 35px;
+        width: 35px;
+        object-fit: cover;
+    }
+
+    .navbar-toggler {
+        /* tuve q usar position para ponerlo a la derecha*/
+        right: 20px;
+        top: 15px;
+
+
+    }
+
+    .hero {
+        /* achica para comprimir el parrafo */
+
+        height: auto;
+
+        h2 {
+            font-size: x-small;
         }
-        .tar-prod-5
-        {
-                grid-column:span none;
+
+        h4 {
+            font-size: x-small;
+        }
+
+        p {
+            width: 100%;
+            text-align: center;
+            font-size: xx-small;
         }
     }
-    @media screen and (max-width:590px)         /* cambia el grd a 2 columnas x responsive */
-    {
-        .tarjetas-de-producto
-        {
-            grid-template-columns:  1fr;
-            grid-auto-rows:360px; 
-            height: auto;
-        }
-        .tar-prod-5
-        {
-                grid-column:span none;
-        }
-    
-    
-        .navbar-brand img
-        {
-            height: 35px;
-            width: 35px;
-            object-fit: cover;
-        }
-        .navbar-toggler
-        {                   /* tuve q usar position para ponerlo a la derecha*/
-            right: 20px;
-            top:15px;
-        
-    
-        }
-        .hero{              /* achica para comprimir el parrafo */
-         
-            height: auto;
-            h2 { font-size:x-small; }
-            h4 {font-size: x-small;}
-            p
-                {
-                    width: 100%;
-                    text-align: center;
-                    font-size:xx-small;
-                }
-             }
-        
-        .productos 
-            {
-                h2  { font-size:small; }
-                p
-                    {
-                        width: 100%;
-                        text-align: center;
-                        font-size:xx-small !important;
-                    }
-                }        
-        .servicios 
-                {
-                h2  { font-size:small; }
-                }
-        .servicios-p1  { font-size:x-small;}
-        .servicios-p2  { font-size:x-small; }       
-    
 
-        .contacto{
-                    h2  { font-size:small; }
-                    h3  { font-size:x-small; }
-                    form
-                        {
-                        div input, textarea
-                            {
-                                width: 80%;
-                            }
-                        }    
-                    }
-                
-        
-
-        .nosotros h2  { font-size:small; }
-        .nosotros h3  { font-size:x-small; }
-    
-        footer
-             {
-             /*   height: auto;*/
-                width:100%;
-             }       
-        .redes
-        {
-            
-            width: 40%;
-            height: auto;
+    .productos {
+        h2 {
+            font-size: small;
         }
 
-        .video-nosotros
-        {
+        p {
+            width: 100%;
+            text-align: center;
+            font-size: xx-small !important;
+        }
+    }
+
+    .servicios {
+        h2 {
+            font-size: small;
+        }
+    }
+
+    .servicios-p1 {
+        font-size: x-small;
+    }
+
+    .servicios-p2 {
+        font-size: x-small;
+    }
+
+
+    .contacto {
+        h2 {
+            font-size: small;
+        }
+
+        h3 {
+            font-size: x-small;
+        }
+
+        form {
+
+            div input,
+            textarea {
+                width: 80%;
+            }
+        }
+    }
+
+
+
+    .nosotros h2 {
+        font-size: small;
+    }
+
+    .nosotros h3 {
+        font-size: x-small;
+    }
+
+    footer {
+        width: 100%;
+    }
+
+    .redes {
+
+        width: 40%;
+        height: auto;
+    }
+
+    .video-nosotros {
         width: 600;
-        height:250px;
-
-        }
-
+        height: 250px;
 
     }
 
+
+}
